[package]
name = "winri"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Accessibility", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
anyhow = "1"
windows-strings = "0"
bimap = "0"
